--- a/style.css
+++ b/style.css
@@ -1,35 +1,146 @@
-#container {
-  width: 300px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
+{
+  box-sizing: border-box;
 }
 
-#login-form {
-  margin-top: 20px;
+body {
+  font-family: Arial, sans-serif;
+  line-height: 1.5;
+  margin: 0;
+  padding: 0;
 }
 
-input[type="text"],
-input[type="password"] {
+h1, h2, h3 {
+  font-weight: 500;
+}
+
+header {
+  background-color: #7ac7e1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+header h1 {
+  margin: 0;
+}
+
+header nav a {
+  color: #fff;
+  text-decoration: none;
+  margin-right: 1rem;
+}
+
+section {
+  padding: 1rem;
+}
+
+section ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+section li {
+  margin-bottom: 1rem;
+}
+
+section li h3 {
+  font-size: 1rem;
+  margin: 0 0.25rem;
+}
+
+section h2 {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+table {
+  border-collapse: collapse;
   width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
 }
 
-input[type="submit"] {
+table thead tr th {
+  text-align: left;
+  font-size: 0.9rem;
+  padding-right: 1rem;
+  border-bottom: 1px solid #ccc;
+}
+
+table tbody tr {
+  border-bottom: 1px solid #ccc;
+  font-size: 0.9rem;
+}
+
+table td {
+  padding: 0.5rem 1rem;
+}
+
+form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+form label {
+  display: block;
+  width: 10rem;
+  margin-bottom: 0.5rem;
+}
+
+form input,
+form textarea {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 0.5rem;
   width: 100%;
-  padding: 10px;
-  background-color: #4d90fe;
-  color: white;
+  margin-bottom: 0.5rem;
+}
+
+form input[type="submit"] {
+  background-color: #7ac7e1;
   border: none;
-  border-radius: 5px;
+  border-radius: 4px;
+  padding: 0.5rem 1rem;
   cursor: pointer;
 }
 
-input[type="submit"]:hover {
-  background-color: #357dea;
+form input[type="submit"]:hover {
+  background-color: #A2DAE3;
+}
+
+@media (min-width: 48em) {
+  header {
+    padding: 2rem;
+  }
+
+  header h1 {
+    margin: 0;
+  }
+
+  section {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem));
+    grid-gap: 1rem;
+  }
+
+  section li {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(10rem));
+    grid-gap: 1rem;
+  }
+
+  section li h3 {
+    grid-column: 1 / span 2;
+  }
+}
+
+@media (min-width: 64em) {
+  header {
+    padding: 3rem;
+  }
+
+  section {
+    grid-template-columns: repeat(auto-fit, minmax(25rem));
+  }
 }
